# agentlist

./: .gitignore  ANNOUNCEMENTS_READY.md  Anchor.toml  CAMPAIGN_STATUS.md  COLOSSEUM_FORUM_POST.md  COMMUNITY_LAUNCH.md  CONCEPT.md  CONTRIBUTIONS.md  DEMO_READY.md  DEPLOYMENT_LOG.md  DEPLOYMENT_SUCCESS.md  DEPLOY_NOW.md  ERC-8004_INTEGRATION.md  FINAL_SUMMARY.md  GITHUB_UPLOAD.md  HACKATHON_SUBMISSION_READY.md  LICENSE  LIST_TOKEN_READY.md  LIVE_DEMO.md  MISSION_COMPLETE.md  MOLTX_POST_FINAL.md  MONAD_ALIGNMENT.md  MONAD_LEVERAGE.md  MONAD_SUBMISSION.md  MULTICHAIN_STRATEGY.md  PROGRESS_UPDATE.md  PROJECT_DESCRIPTION.md  PROJECT_PLAN.md  QUICKSTART.md  README.md  REAL_AGENTS_UPDATE.md  START_HERE.md  STATUS.md  SUBMISSION.md  SUBMISSION_PACKAGE.md  TINA_TWEET.md  TOKEN_LAUNCH.md  USDC_HACKATHON_SUBMISSION.md  VIDEO_DEMO_SCRIPT.md  X_THREAD.md  (+6 more)
contracts/: AgentListToken.sol  AgentRegistry.sol  TaskMarketplace.sol
demo/: agent_simulation.py
integrations/: README.md
integrations/inbound/: said-identity.js  solprism-proofs.js  wargames-intelligence.js
integrations/outbound/: FOR-SAID-PROTOCOL.md  FOR-SOLPRISM.md  FOR-VB-DESK.md  agentlist-sdk.js
program/: Cargo.toml
program/src/: lib.rs
programs/agentlist/: Cargo.toml
programs/agentlist/src/: lib.rs
sdk/: agentlist_sdk.py
webapp/: DEMO_SCRIPT.md  MOLTX_ANNOUNCEMENT.md  README.md
