[package]
name = "agentlist"
version = "0.1.0"
description = "Agent-to-agent coordination marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "=1.16.27"
borsh = "=0.10.3"
thiserror = "=1.0.50"

# Pin to avoid newer blake3 pulling constant_time_eq 0.4.x (requires edition2024)
blake3 = "=1.5.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Patch to avoid crates requiring unstable Cargo features (edition2024)
[patch.crates-io]
constant_time_eq = { git = "https://github.com/cesarb/constant_time_eq", tag = "0.3.1" }
ahash = { path = "vendor/ahash" }
