[package]
name = "agentlist"
version = "0.1.0"
description = "Agent-to-agent coordination marketplace on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentlist"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
